unpackaged/main/default/objects/Advocacy__c/Advocacy__c.object-meta.xml
<CustomObject>
    <label>Advocacy</label>
    <nameField>
        <displayFormat>A{0000}</displayFormat>
        <label>Advocacy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advocacies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>