unpackaged/main/default/objects/Advocacy__c/fields/Name_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Event__c</fullName>
    <inlineHelpText>Name of event / meeting the podium presentation was presented</inlineHelpText>
    <label>Name of Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>