unpackaged/main/default/objects/Advocacy__c/fields/Publication_Event__c.field-meta.xml
<CustomField>
    <fullName>Publication_Event__c</fullName>
    <inlineHelpText>Name of publication / in-house collateral / paper / event</inlineHelpText>
    <label>Publication / Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>