unpackaged/main/default/objects/Advocacy__c/fields/Surgeon_Contact__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Contact__c</fullName>
    <label>Surgeon / Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Advocacies</relationshipLabel>
    <relationshipName>Advocacies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>