unpackaged/main/default/objects/Advocacy__c/recordTypes/Case_study.recordType-meta.xml
<RecordType>
    <fullName>Case_study</fullName>
    <active>true</active>
    <description>Case study / series on Stimulan that can be used for marketing purposes</description>
    <label>Case study</label>
</RecordType>