unpackaged/main/default/objects/Advocacy__c/recordTypes/Paper.recordType-meta.xml
<RecordType>
    <fullName>Paper</fullName>
    <active>true</active>
    <description>White paper or published paper of an infection case using Stimulan</description>
    <label>Paper</label>
</RecordType>