unpackaged/main/default/objects/Advocacy__c/recordTypes/Podium.recordType-meta.xml
<RecordType>
    <fullName>Podium</fullName>
    <active>true</active>
    <description>Presentation with a significant positive reference to Stimulan</description>
    <label>Podium</label>
</RecordType>