unpackaged/main/default/objects/Advocacy__c/recordTypes/Poster.recordType-meta.xml
<RecordType>
    <fullName>Poster</fullName>
    <active>true</active>
    <description>Poster with significant positive reference to Stimulan</description>
    <label>Poster</label>
</RecordType>